    CMF bytes in the PNG datastream.

Version 1.6.3beta05 [May 9, 2013]
  Choose to use windowBits==15 or the zlib header setting via the
    benign-errors setting.  If benign errors are allowed, then ignore
    the windowBits setting in the zlib header.
  Zlib-1.2.8 and earlier don't allow us to decrease the windowBits, so
    undid the improvement in beta04.
  Added an option to force maximum window size for inflating. For inflate,
    reverted previous fixes.
  Added fixitxt and pngdeflate to the built programs and removed warnings
    from the source code and timepng that are revealed as a result.  Fixed
    fixitxt when the chunk length is more than 65535 (untested, no test case).
  Detect wrong libpng versions linked to pngdeflate, which currently
    only works with libpng versions that can be made to reliably fail when
    the deflate data contains an out-of-window reference.  This means only
    1.6 and later.
  Fixed gnu issues: g++ needs a static_cast, gcc 4.4.7 has a broken warning
    message which it is easier to work round than ignore.
  Updated contrib/pngminus/pnm2png.c (Paul Stewart):
    Check for EOF
    Ignore "#" delimited comments in input file to pnm2png.c.
    Fixed whitespace handling
    Added a call to png_set_packing()
    Initialize dimension values so if sscanf fails at least we have known
      invalid values.
  Attempt to detect configuration issues with pngdeflate, which requires
    both the correct libpng and the correct zlib to function correctly.
  Check ZLIB_VERNUM for mismatches, enclose #error in quotes
  Renamed contrib/tools/fixitxt to contrib/tools/png-fix-itxt.
  Added information in the documentation about problems with and fixes for
  the bad CRC and bad iTXt chunk situations.

Send comments/corrections/commendations to png-mng-implement at lists.sf.net
(subscription required; visit
https://lists.sourceforge.net/lists/listinfo/png-mng-implement
to subscribe)
or to glennrp at users.sourceforge.net

Glenn R-P
#endif